--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/provenance.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/provenance.css
@@ -338,6 +338,10 @@ div.content-detail-value {
     min-height: 150px;
 }
 
+#provenance-table div.slick-viewport {
+    overflow-x: hidden !important;
+}
+
 /* provenance lineage */
 
 #provenance-lineage {
