--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/templates.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/templates.css
@@ -91,3 +91,7 @@
     right: 0px;
     min-height: 150px;
 }
+
+#templates-table div.slick-viewport {
+    overflow-x: hidden !important;
+}
